fix(ui): member card, fix member card alignment

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -196,8 +196,7 @@
 .groups-members-card-details-non-admin {
   align-items: center;
   display: flex;
-  padding-top: 0;
-  
+  transform: translate(0px, -15px);
   i {
     margin-right: 15px;
     padding-bottom: 0;
